--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&family=Lora:ital,wght@0,400..700;1,400..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Slab:wght@100..900&family=Sen:wght@400..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&family=Lora:ital,wght@0,400..700;1,400..700&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sen:wght@400..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&family=Lora:ital,wght@0,400..700;1,400..700&family=Nunito+Sans:ital,opsz@0,6..12;1,6..12&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sen:wght@400..800&display=swap');
 .none-style {
   border: none;
   background: none;
   cursor: pointer;
+}
+
+.font-inter {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "slnt" 0;
+}
+
+.roboto-light {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.nunito-sans-regular {
+  font-family: "Nunito Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100,
+    "YTLC" 500;
+}
+
+
+
+
+/* Para pantallas grandes (más de 768px) */
+@media (min-width: 768px) {
+  .flex-container {
+    display: flex;
+    flex-direction: row; /* Por defecto es flex-row */
+    /* Otros estilos que desees */
+  }
+}
+
+/* Para pantallas más pequeñas (menos de 768px) */
+@media (max-width: 768px) {
+  .flex-container {
+    flex-direction: column; /* Cambiamos a flex-col */
+  }
+}
+
+@font-face {
+  font-family: 'Sohne-bunch'; /* Name your font family */
+  src: url('./assets/fonts/TestSöhne-Buch.otf'); /* Locate the .ttf file within your directory*/
+}
+
+@font-face {
+  font-family: 'Sohne-fett'; /* Name your font family */
+  src: url('./assets/fonts/TestSöhne-Fett.otf'); /* Locate the .ttf file within your directory*/
 }
